css/screen.css
/* ... */
.line {
  border: white solid 2px;
  width: 200px;
  margin: 20px 0px;
}

.clear{ 
  clear:both;
}

.page.quote,
.page.story{ 
  position:relative;
  padding:300px 80px 0px;
  box-sizing: border-box;
  -moz-box-sizing:border-box; /* Firefox */
  -webkit-box-sizing:border-box; /* Safari */
}

.page.quote h1,
.page.story h1,
.goals li { 
  text-align:left;
  color:#fff;
  font-size: 56px;
  list-style: none;
}

.page.quote h1 {
  margin-bottom: 0px;
}

.page.story{ 
  position:relative;
  width:100%;
  height:auto;
  padding-top:10px;
  padding-left:400px;
  box-sizing: border-box;
  -moz-box-sizing:border-box; /* Firefox 
  -webkit-box-sizing:border-box; /* Safari */
}

.sidebar{ 
  width:400px;
  position:fixed;
  left:0px;
  top:0px;
  bottom:0px;
  z-index:-7;
}

.sidebartitle{ 
  width:400px;
  left:0px;
  position:absolute;
  top:20px;
}

.sidebartitle.appear{
  transition: all 1s;
  -webkit-transition: all 1s;
}

.sidebartitle h1{ 
  font-size: 100px;
  color: #fff;
  margin: 0 0 0 50px;
  text-align: left;
  text-shadow: 0px 2px 6px rgba(0, 0, 0, .05);
}

.mapsidebar h1{ 
  font-size: 100px;
  color: #333;
  margin-bottom: 0px;
}

.sidebartitle h2{ 
  position:relative;
  left:-400px;
  margin-top:0px;
  text-transform: uppercase;
}

.sidebartitle.appear h2{ 
  left: 50px;
  transition: all 1s;
  -webkit-transition: all 1s;
}

.pagebg{ 
  position:fixed;
  top:0px; 
  bottom:0px;
  left:0px;
  right:0px;
  z-index:-10;
  display:none;

}
.pagebg.quote{ 
  z-index:-5;
}
.pagebg.appear{ 

}

.pagebg img{ 
  min-width:100%;
  min-height:100%;
}

.cityLeaders iframe {
  display: block;
  margin-top: 50px;
}

.quote .bigtext h1 {
  font-size: 73px;
  text-transform: uppercase;
}

.themes {
  margin: 200px 0px 0px;
}

.themes .headline {
  font-size: 50px;
  margin-top: 0px;
}

.blurb {
  width: 940px;
}

img.stats, 
.market img.stats {
margin: 50px 240px;
display: block;
}

.bioright {
  margin-left: 15px;
}

.apps .bioright {
  margin-left: 50px;
}

.bioleft {
  margin-right: 30px;
}

.bios {
  margin: 50px auto;
  float: left;
}

.bios h3 {
  margin-top: -15px;
}

.bios h5 {
  margin-bottom: 15px;
}

.bios p {
  margin-top: 0px;
}

.bios.right .span5,
.bios.apps.right .span6 {
  float: right;
}

.bios .url {
  font-size: 19px;
  font-weight: bold;
  text-align: left;
}

.moreapps,
.captains {
  clear: both;
  float: left;
  max-width: 960px;
}

.moreapps h3 {
  margin-top: 1    0px;
}

.moreapps img {
  margin-top: 30px;
}

.market img {
  margin: 30px 0px;
  display: block;
}

.getinvolved h1 {
  margin: 0px;
}

.thanks h2 {
  text-align: center;
  text-transform: uppercase;
  margin: 0px auto 30px;
}

.thanks img {
  max-height: 60px;
  max-width: 242px;
  margin: 0 auto;
  display: block;
}

.fellowship{ 
  color:#333;
  position:relative;
  background:#fff;
}

#fellowshipMap{ 
  margin-left:400px;
  height:500px;
  position:absolute;
  top:0px;
  right:0px;
}

#fellowshipMap path {
  fill: #ccc;
  stroke: #fff;
}

#fellowshipMap .city{ 
  display:none;
}

.fixed-top.apply{ 
  position:fixed !important;
  top:0px;
  right:80px !important;

}
.yeartitle{ 
  display:none;
}

.fellowshipyearfixed{ 
  position:fixed;
  top:0px;
  left:50px;
  background:#fff;
  display:inherit;
}

.citycard{ 
  height:600px;
  border:solid 2px #FC2848;
  width:300px;
  margin:30px 0px;
  display:none;
  position:fixed;
  top:220px;
  left:50px;

}
.cardholder.y2011{
  margin-top:200px;

} 
.cardholder{ 
  height:500px;
  width:300px;

}

.citycard .partnersection {
  width: 190px;
}


.citycard hr {
    border: solid 1px #FC2848;
    margin-bottom: 10px;
}

.bostonseal,
.phillyseal,
.seattleseal,
.austinseal, 
.chiseal, 
.detroitseal,
.hnlseal,
.maconseal,
.nolaseal,
.scseal {
  background-image: url('../img/city_seals.jpg');
  background-size: 59px;
  float: right;
  width: 59px;
  height: 59px;
}

.bostonseal {
  background-position: 0 0;
}

.phillyseal {
  background-position: 0 -59px;
}

.seattleseal {
  background-position: 0 -118px;
}

.austinseal {
  background-position: 0 -177px;
}

.chiseal {
  background-position: 0 -236px;
}

.detroitseal {
  background-position: 0 -295px;
}

.hnlseal {
  background-position: 0 -354px;
}

.maconseal {
  background-position: 0 -413px;
}

.nolaseal {
  background-position: 0 -472px;
}

.scseal {
  background-position: 0 -531px;
}
.fellowship .mapsidebar{ 
  float:left;
  position:relative;
  left:-350px;
  top:-350px;

}
.fellowship .fellow{ 
  position:fixed;
  bottom:50px;
  right:-800px;
  height:200px;
  width:799px;
  -webkit-transition: 0.6s ease-in-out right;
     -moz-transition: 0.6s ease-in-out right;
       -o-transition: 0.6s ease-in-out right;
          transition: 0.6s ease-in-out right;

}

.fellowship .fellow.appear{ 
  right:100px;

  -webkit-transition: 0.6s ease-in-out right;
     -moz-transition: 0.6s ease-in-out right;
       -o-transition: 0.6s ease-in-out right;
          transition: 0.6s ease-in-out right;
}


.fellowship .yeartitle h1 {
  font-size: 100px;
  color: #333;
  margin-bottom: 0px;
}

.fellowship .cfa h2{
  text-transform: none;
  margin-top: 
}

.fellowship h2 {
  margin-top: 0px;
  text-transform: uppercase;
}

.fellowship h4 {
  background-color: #FC2848;
  color: #fff;
  text-shadow: none;
  padding: 10px 20px;
}

.fellowship h5 {
  color: #FC2848;
  font-size: 18px;
  font-style: normal;
  font-weight: 700;
  text-shadow: none;
  text-transform: uppercase;
}

.fellowship .innercard {
  padding: 20px;
}

.fellowship .cardsections {
  margin-bottom: 30px;
}

.fellowship li {
  text-shadow: none;
}

.people ul,
.fellowship ul {
  font-weight: 300;
  text-align: left;
}

.people ul {
  float: left;
  line-height: 26px;
  margin: 0px 50px 50px 0px;
}
/* ... */

